Use cached thread pool instead of virtual threads for compatibility reasons